<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/mensagemLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensagem_login"
        android:textAlignment="center"
        android:textColor="#ffa590"
        android:textSize="24sp"
        tools:text="Faça seu login" />


    <EditText
        android:id="@+id/nomeLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="9"
        android:inputType="textPersonName"
        android:text="@string/nomeLogin" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="9"
        android:inputType="textPassword"
        android:text="@string/passwordLogin"/>


    <Button
        android:id="@+id/botaoLogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botaoLogar"
        android:backgroundTint="@color/brown"/>


    <ImageView
        android:id="@+id/imagemLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textologin"
        android:layout_width="match_parent"
        android:layout_height="24sp"
        android:text="@string/textoLogin"
        android:textSize="16dp"
        android:textColor="#ffa590"
        android:textAlignment="center"
        tools:text="Que tal estudar no melhor curso de TI?"/>

    <TextView
        android:id="@+id/textologin2"
        android:layout_width="match_parent"
        android:layout_height="24sp"
        android:text="@string/textoLogin2"
        android:textSize="16sp"
        android:textColor="#ffa590"
        android:textAlignment="center"
        tools:text="Então entre na nossa plataforma mobile."/>

</LinearLayout>